--- a/AR_Navigation/Views/Cells/SearchResultTableViewCell.xib
+++ b/AR_Navigation/Views/Cells/SearchResultTableViewCell.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13526" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,19 +24,21 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1r9-zy-DmS">
-                        <rect key="frame" x="32" y="4" width="383" height="56.5"/>
+                        <rect key="frame" x="8" y="4" width="431" height="56.5"/>
                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="32P-Zq-Qy9">
-                            <rect key="frame" x="0.0" y="0.0" width="383" height="56.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="431" height="56.5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="9x3-RX-tqw">
-                                    <rect key="frame" x="8" y="4" width="367" height="28"/>
+                                    <rect key="frame" x="8" y="4" width="415" height="28"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="6MB-vd-LWh">
-                                    <rect key="frame" x="8" y="36" width="367" height="16.5"/>
+                                    <rect key="frame" x="8" y="36" width="415" height="16.5"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="16.5" id="4D5-3M-1Sd"/>
                                     </constraints>
@@ -65,8 +67,8 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="1r9-zy-DmS" secondAttribute="trailing" constant="32" id="4gx-Hi-1An"/>
-                    <constraint firstItem="1r9-zy-DmS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="32" id="9Rd-QX-aMg"/>
+                    <constraint firstAttribute="trailing" secondItem="1r9-zy-DmS" secondAttribute="trailing" constant="8" id="4gx-Hi-1An"/>
+                    <constraint firstItem="1r9-zy-DmS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="9Rd-QX-aMg"/>
                     <constraint firstAttribute="bottom" secondItem="1r9-zy-DmS" secondAttribute="bottom" constant="4" id="OZz-6X-0AS"/>
                     <constraint firstItem="1r9-zy-DmS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="fx9-KJ-lDC"/>
                 </constraints>
