--- a/AR_Navigation/Modules/AR/AR.storyboard
+++ b/AR_Navigation/Modules/AR/AR.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,12 +13,25 @@
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ARViewController" customModule="AR_Navigation" customModuleProvider="target" sceneMemberID="viewController">
-                    <arscnView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="BrB-h1-WRS">
+                    <view key="view" contentMode="scaleToFill" id="GRr-uw-gFS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </arscnView>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" wantsMultisampling="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tSV-ku-61y">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </arscnView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tSV-ku-61y" firstAttribute="leading" secondItem="myy-hv-v8b" secondAttribute="leading" id="43X-rE-t5u"/>
+                            <constraint firstItem="tSV-ku-61y" firstAttribute="bottom" secondItem="myy-hv-v8b" secondAttribute="bottom" id="Pg9-xe-dxp"/>
+                            <constraint firstItem="tSV-ku-61y" firstAttribute="trailing" secondItem="myy-hv-v8b" secondAttribute="trailing" id="RcM-kz-fjt"/>
+                            <constraint firstItem="tSV-ku-61y" firstAttribute="top" secondItem="GRr-uw-gFS" secondAttribute="top" id="T20-eD-r9d"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="myy-hv-v8b"/>
+                    </view>
                     <connections>
-                        <outlet property="sceneView" destination="BrB-h1-WRS" id="8tw-pS-Xuq"/>
+                        <outlet property="sceneView" destination="tSV-ku-61y" id="Vco-vz-i2c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
@@ -27,7 +41,7 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="6" y="-27"/>
+            <point key="canvasLocation" x="5.5999999999999996" y="-27.436281859070466"/>
         </scene>
     </scenes>
 </document>
