--- a/AR_Navigation/Modules/AR/AR.storyboard
+++ b/AR_Navigation/Modules/AR/AR.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13526" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,13 +21,24 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" wantsMultisampling="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tSV-ku-61y">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rC8-Kx-Lqp">
+                                <rect key="frame" x="331" y="36" width="28" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="rC8-Kx-Lqp" secondAttribute="height" multiplier="1:1" id="bp1-gg-id9"/>
+                                    <constraint firstAttribute="height" constant="28" id="okS-l7-k8t"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="icon_reload"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="myy-hv-v8b" firstAttribute="trailing" secondItem="rC8-Kx-Lqp" secondAttribute="trailing" constant="16" id="3rc-a8-C6b"/>
                             <constraint firstItem="tSV-ku-61y" firstAttribute="leading" secondItem="myy-hv-v8b" secondAttribute="leading" id="43X-rE-t5u"/>
                             <constraint firstItem="tSV-ku-61y" firstAttribute="bottom" secondItem="myy-hv-v8b" secondAttribute="bottom" id="Pg9-xe-dxp"/>
                             <constraint firstItem="tSV-ku-61y" firstAttribute="trailing" secondItem="myy-hv-v8b" secondAttribute="trailing" id="RcM-kz-fjt"/>
                             <constraint firstItem="tSV-ku-61y" firstAttribute="top" secondItem="GRr-uw-gFS" secondAttribute="top" id="T20-eD-r9d"/>
+                            <constraint firstItem="rC8-Kx-Lqp" firstAttribute="top" secondItem="myy-hv-v8b" secondAttribute="top" constant="16" id="zrZ-v6-deh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="myy-hv-v8b"/>
                     </view>
@@ -44,4 +56,7 @@
             <point key="canvasLocation" x="5.5999999999999996" y="-27.436281859070466"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon_reload" width="64" height="64"/>
+    </resources>
 </document>
