Trying to create normal light effect

--- a/AR_Navigation/Modules/AR/AR.storyboard
+++ b/AR_Navigation/Modules/AR/AR.storyboard
@@ -56,7 +56,7 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="5.5999999999999996" y="-27.436281859070466"/>
+            <point key="canvasLocation" x="-185" y="-29"/>
         </scene>
     </scenes>
     <resources>
